# lab-4-I-naph-3

./: CMakeLists.txt
src/resource_core/: CMakeLists.txt  file_handle.cpp  file_handle.hpp  resource_core.cpp  resource_error.hpp  resource_manager.cpp  resource_manager.hpp
src/resource_core/include/: CMakeLists.txt  resource_error.cpp
src/resource_core/include/lab4/: resource_core.hpp
tests/: tests.cpp
